rearchitected files for additional views

--- a/gv-viewer/index.html
+++ b/gv-viewer/index.html
@@ -7,8 +7,10 @@
      <!--<script id="splash" type="text/template" charset="utf-8" src="templates/splash.template"></script>-->
      <script language="Javascript" type="text/javascript">
        function launch(){
-         var gvDataView = new GVDataView;
-         $("#frame").html(gvDataView.el);
+         var gvTwitterAccountsView = new GVTwitterAccountsView();
+         var router = new GVRouter();
+         Backbone.history.start({pushState: false, root: "/medialab/socialmirror/"})
+         $("#frame").html(gvTwitterAccountsView.el);
        }
      </script>
   </head>
@@ -26,7 +28,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
+              <li><a href="#twitter_accounts">Twitter Accounts</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -47,7 +49,7 @@
     <script type="text/javascript" charset="utf-8" src="lib/underscore.js"></script>
     <script type="text/javascript" charset="utf-8" src="lib/backbone.js"></script>
     <script type="text/javascript" charset="utf-8" src="app/models.js"></script>
-    <script type="text/javascript" charset="utf-8" src="app/views.js"></script>
+    <script type="text/javascript" charset="utf-8" src="app/twitter_accounts_view.js"></script>
     <script type="text/javascript" charset="utf-8" src="app/routers.js"></script>
     <!-- Inline Templates -->
     <script type="text/template" id="twitter_account_rows">
