now visualise twitter collocation graph

--- a/gv-viewer/index.html
+++ b/gv-viewer/index.html
@@ -4,6 +4,7 @@
      <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0;width=device-width;user-scalable=no;"></meta>
      <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.css"/>
      <link rel="stylesheet" type="text/css" href="styles/main.css"/>
+     <link rel="stylesheet" type="text/css" href="styles/force.css"/>
      <!--<script id="splash" type="text/template" charset="utf-8" src="templates/splash.template"></script>-->
      <script language="Javascript" type="text/javascript">
        var gvCategoriesView = null;
