added ability to sort by category collocation and category posts

--- a/gv-viewer/index.html
+++ b/gv-viewer/index.html
@@ -47,7 +47,13 @@
       <thead>
         <tr><th colspan="7"><h3>Twitter Accounts</h3></th></tr>
         <tr>
-  <th ><span class="btn btn-mini">c coll</span></th><th><span class="btn btn-mini">c posts</span></th><!--<th><span class="btn btn-mini">c_avg coll</span></th>--><th id="twitter_collocation_sort" ><span class="btn btn-mini">all coll</span></th><th id="twitter_posts_sort" ><span class="btn btn-mini">all posts</span></th><!--<th><span class="btn btn-mini">all_avg coll</span></th>--><th>account</th>
+          <th id="twitter_cat_collocation_sort"><span class="btn btn-mini">c coll</span></th>
+          <th id="twitter_cat_posts_sort"><span class="btn btn-mini">c posts</span></th>
+          <!--<th><span class="btn btn-mini">c_avg coll</span></th>-->
+          <th id="twitter_collocation_sort" ><span class="btn btn-mini">all coll</span></th>
+          <th id="twitter_posts_sort" ><span class="btn btn-mini">all posts</span></th>
+          <!--<th><span class="btn btn-mini">all_avg coll</span></th>-->
+          <th>account</th>
         </tr>
       </thead>
     </script>
