added additional fields to twitter account page, including a set of category buttons

--- a/gv-viewer/index.html
+++ b/gv-viewer/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <title>GV Social Browser</title>
+     <title>Whose Voices? Twitter Citation in Global Voices</title>
      <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0;width=device-width;user-scalable=no;"></meta>
      <link rel="stylesheet" type="text/css" href="styles/bootstrap/css/bootstrap.css"/>
      <link rel="stylesheet" type="text/css" href="styles/main.css"/>
@@ -17,12 +17,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">GV Twitter Analysis</a>
+          <a class="brand" href="#">Whose Voices? Twitter Citation in Global Voices</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#twitter_accounts">Twitter Accounts</a></li>
-              <li><a href="#categories">Categories</a></li>
+              <li class="active"><a href="#categories">Select Category</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
