added more labels

--- a/gv-viewer/index.html
+++ b/gv-viewer/index.html
@@ -57,7 +57,7 @@
     </script>
     <script type="text/template" id="category_post_head">
       <thead>
-        <tr><th colspan="3" align="left"><h3>Twitter Citation in Blog Post</h3></th></tr>
+        <tr><th colspan="3" align="left"><h3>Twitter Citation Per Blog Post</h3></th></tr>
         <tr>
           <th id="posts_date_sort"><span class="btn">date</span><th id="posts_tweet_sort" ><span class="btn">#</span></th></th><th>title</th>
         </tr>
