added more analytics. updated categories page for usability. Changed routes

--- a/gv-viewer/index.html
+++ b/gv-viewer/index.html
@@ -6,6 +6,34 @@
      <link rel="stylesheet" type="text/css" href="styles/main.css"/>
      <link rel="stylesheet" type="text/css" href="styles/force.css"/>
      <!--<script id="splash" type="text/template" charset="utf-8" src="templates/splash.template"></script>-->
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-33941187-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+
+<!-- Piwik --> 
+<script type="text/javascript">
+var pkBaseURL = (("https:" == document.location.protocol) ? "https://stats.vojo.co/" : "http://stats.vojo.co/");
+document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script type="text/javascript">
+try {
+var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 3);
+piwikTracker.trackPageView();
+piwikTracker.enableLinkTracking();
+} catch( err ) {}
+</script><noscript><p><img src="http://stats.vojo.co/piwik.php?idsite=3" style="border:0" alt="" /></p></noscript>
+<!-- End Piwik Tracking Code -->
+
   </head>
   <body>
 
@@ -17,10 +45,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Whose Voices? Twitter Citation in Global Voices</a>
+          <a class="brand" href="index.html">Whose Voices? Twitter Citation in Global Voices</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#categories">Select Category</a></li>
+              <li class="active"><a href="http://civic.mit.edu/blog/natematias/media-representation-in-the-arab-uprisings-egypt-and-libya">Blog Post: Media Representation in the Arab Uprisings</a></li>
+              <li class="active"><a href="https://vimeo.com/47062773">Watch the Video</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -31,6 +60,7 @@
     <!-- Contents -->
     <div class="container" id="main_container">
       <div id="frame">
+      <p>Are you having difficulty reading this? I'm afraid this experimental visualisation only works in the <a href="http://firefox.com">Firefox Web Browser</a>.</p>
       </div>
     </div>
 
